<resources>
    <string name="app_name">超空</string>
    <string name="hello_blank_fragment">添加手环</string>
    <string name="tb_home">首页</string>
    <string name="tb_home_hss">HSH</string>
    <string name="tb_health">运动健康</string>
    <string name="tb_ck_circle">超空圈</string>
    <string name="tb_mine">我</string>
    <string name="title_activity_discovery_bluetooth">搜索手环</string>
    <string name="text_button_enter">立即体验</string>
    <string name="regist">注册</string>
    <string name="regist_sure">完成</string>
    <string name="user_info_activity">基本信息</string>
    <string name="login_activity">登录</string>
    <string name="forget_pwd_activity">忘记密码</string>
    <string name="buletooth_activity">添加手环</string>
    <string name="regist_activity">注册</string>
    <string name="btn_out">退出登录</string>
    <string name="user_info_jump">跳过</string>
    <string name="health_major">健身指导</string>
    <string name="health_custom">健康管理</string>
    <string name="ckCircle_recommend">推荐</string>
    <string name="ckCircle_look">关注</string>
    <string name="buletooth_open">开启蓝牙,添加手环</string>
    <string name="buletooth_again">请重新连接</string>
    <string name="ckCircle_mine">我的S圈</string>
    <string name="title_activity_mine_set">设置</string>
    <string name="title_activity_mine_userinfo">个人资料</string>
    <string name="not_wlan_show">网络状况异常，请检查</string>
    <string name="hyerspace">HSH</string>
    <string name="aginLgin">此账号已在其他手机登录，请重新登录</string>
    <string name="noLgin">未登录，快去登录吧</string>
    <string-array name="data_setting">
        <item>关于超空</item>
        <item>门店认证</item>
        <item>设置健康监测权限</item>
        <item>清除缓存</item>
        <item>检查更新</item>
        <item>意见反馈</item>
        <item>协议</item>
        <item>帮助</item>
        <item>退出登录</item>
    </string-array>
    <string-array name="data_aboutcks">

        <item>功能介绍</item>
        <item>帮助与反馈</item>
        <item>产品介绍</item>
    </string-array>
    <string-array name="data_health_one_majors">
        <item>腿</item>
        <item>腰</item>
        <item>胸肌</item>
        <item>肩</item>
        <item>手臂</item>
        <item>腹肌</item>
    </string-array>
    <string-array name="data_health_two_majors">
        <item>入门必练</item>
        <item>局部塑形</item>
        <item>减压舒缓</item>
        <item>全身打造</item>
    </string-array>
    <string-array name="data_health_three_majors">
        <item>主食/杂粮</item>
        <item>蔬菜/水果</item>
        <item>鱼肉/奶蛋</item>
        <item>其他</item>
    </string-array>
    <string-array name="data_health_four_majors">
        <item>瘦身</item>
        <item>拉丁</item>
        <item>芭蕾</item>
        <item>街舞</item>
    </string-array>
    <string-array name="data_health_fivs_majors">
        <item>跑前</item>
        <item>跑后</item>
    </string-array>
    <string-array name="data_health_name_majors">
        <item>各部位练习</item>
        <item>瑜伽</item>
        <item>主食</item>
        <item>舞蹈</item>
        <item>跑步</item>
    </string-array>
    <string name="edittext_hint"><font size="6sp">轻点编辑体重信息</font></string>
    <string name="forget_pwd_activity_sure">确认</string>
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="shop">商城</string>
    <string name="detail_text">曲腿运动</string>
    <string name="tips_not_wifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="no_url">播放地址无效</string>
    <string name="detail_text_name">名称</string>
    <string name="record_cal">热量</string>
    <string name="record_weight">体重</string>
    <string name="record_step">步数</string>
    <string name="record_sleep">睡眠</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="information">私信</string>
    <string name="information1">消息</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="diy_call_back">自定义回调</string>
    <string name="diy_call_back_ps">ps:网络定位由于精度低于gps，计算距离会有部分偏差</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈:\n
        邮件格式格式：\n
		1) 手机标识（移动联通IMEI，电信MEID）\n
		2) 问题发生时间；\n
		3）定位类型：失败（给出返回码），或者不准（给出真实位置）等；\n
		4）具体描述：细节描述，可以给出问题发生的频率或者APP名称，sdk版本等，也可以加上附件如日志，贴图等\n
        </string>
    <string name="qa_callback_mail">反馈邮箱:loc-bugs@baidu.com</string>
    <string name="small_problem">Player encountered a small problem</string>
    <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>
    <string name="not_support">player not support this device</string>
    <string name="RSA_PRIVATE">MIICdwIBADANBgkqhkiG9w0BAQEFAASCAmEwggJdAgEAAoGBAL51jaxQhxW9PnWpW+nz6yJ76tp9eGFXmfGnuxMK+Pmx/qavdsewXOLBfI2OSCR39TzxwMYvCmUrnrt0fVSa7mblbNos2FnMM9ijnx8bsAAhm+i7BKhuaHMunJKH69L+D753zH3P1YIh0ly5DnAr3WPqHydp384qBvb8NS9Tay0HAgMBAAECgYB82PIVknP6fCMFXg8yPQJViIVa1ASlSpdPIXQv93FdvKABA+QI4kMBIXRUFoCT506KtK55OzzFNOLIXoQJgcXj69z0l6pmjJJgXMaBW/9rOzelot13CiGatrIrGngEZO+bCBTud/jQA598zjZ1g182tT+FLDL7GIftW2hC8GqtAQJBAN+XrYsyfL+uSmLdAVEz1vzziU1naGr10Msm1jMnnO/JYdB+84j7FSHxsQ4YOgsmeN5YVsJcVfc/CReOxknns38CQQDaEHnVPDt+Z7sqT7bN0UKh0/CrqkDTiIjhz1lJyIIoqVRoeJjJn1wlEKBV5R9gkTJutQTVU19XFtblMEnOy6p5AkEAw170rEmMSa0QoHw+d2bVtydR1QnDapqqO6kOx5oYfkm4J4eWYx4J5CQdMpSmuzF9scL85E3sa+NvnV8LEm7cHwJALtXzFPWG4bNt47yTSslzQka/Hl/G5Kginj1mtA44xnr4AihEyKlNpThY95nqj1cgOd7vVtI9W/sv1LH2aFAeIQJBAIqXbMc6xGVfuiFAJKtg+AFNMBP0UOEgMEoKo4RPFp21nBhFgL9/WYM4ZjyHUdr45rCySAqQovw4DCHLfQZC23I=</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="wx_result">支付结果获取中请稍后...</string>
    <string name="camera_open_error">启动相机失败</string>
    <string name="photo_preview">PhotoPreview</string>
    <string name="take_photo">TakePhoto</string>
    <string name="display_to_gallery">显示到相册</string>
    <string name="not_specify_a_directory">未指定存储目录</string>
    <string name="help">帮助</string>
    <string name="help_content">当前权限被禁用，建议到设置界面开启权限!</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="android_animation">Android  Animation</string>
    <string name="android_animator">Android  Animator</string>
    <string name="day_night_mode">DayNight Mode</string>
    <string name="animation_test">Animation Test</string>
    <string name="title_thirdUserInfoActivity">个人信息上传</string>
    <string name="cir_dw">朋友圈定位页面</string>
    <string name="health_movement">健康监测</string>
    <string name="tb_mine_coach">我</string>
    <string name="tb_health_coach">历史订单</string>
    <string name="tb_home_hss_coach">进行中</string>
    <string name="progact">商品</string>
    <string name="sj">私教</string>
    <string name="recording_video">录取视频</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="capture_image">抓取图片</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="Hands_free">免提</string>
    <string name="mute">静音</string>
    <string name="app_slogon">即时通讯云领导者</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="prompt">提示</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="stop_record">停止录制</string>
    <string name="record_finish_toast">录制完毕，文件存储在%s</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="user_forbidden">用户被服务器限制连接</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="push_settings">消息推送设置</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="set_custom_appkey">自定义App key</string>
    <string name="set_custom_server">自定义server</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在加载数据</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
</resources>