<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/root_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

    <com.hyphenate.media.EMCallSurfaceView
        android:id="@+id/opposite_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_network_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        />

    <RelativeLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <LinearLayout
            android:id="@+id/ll_top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_call_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/c_babcbc"
                android:textSize="@dimen/dshipinOne"
                android:visibility="visible"/>

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chronometer"
                android:textColor="#fff"
                android:visibility="gone"
                tools:ignore="HardcodedText"/>

            <TextView
                android:id="@+id/tv_is_p2p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="@dimen/dshipin"
                tools:ignore="HardcodedText"/>

        </LinearLayout>

        <!-- 演示视频录制功能 -->
        <Button
            android:id="@+id/btn_record_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_top_container"
            android:text="@string/recording_video"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_switch_camera"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@id/btn_record_video"
            android:layout_marginTop="12dp"
            android:background="@drawable/shot_overturn"
            />

        <Button
            android:id="@+id/btn_capture_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_switch_camera"
            android:text="@string/capture_image"
            android:visibility="gone"
            />
        <!--     <Button
            android:layout_marginTop="3dp"
            android:id="@+id/btn_toggle_video_stream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂停视频"
            android:layout_below="@id/btn_record_video"
            /> -->

        <TextView
            android:id="@+id/tv_call_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/local_surface"
            android:layout_alignParentRight="true"
            android:textColor="#afff"
            android:textSize="12sp"
            android:visibility="gone"
            />

        <com.hyphenate.media.EMCallSurfaceView
            android:id="@+id/local_surface"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ll_top_container"
            android:layout_marginTop="@dimen/dshipinTop"/>

        <LinearLayout
            android:id="@+id/ll_surface_baseline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"/>

            <LinearLayout
                android:id="@+id/ll_bottom_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="18dp">

                <LinearLayout
                    android:id="@+id/ll_voice_control"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_mute"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:src="@drawable/video_mute"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/mute"
                            android:textColor="#666167"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_handsfree"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:src="@drawable/video_speker"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/Hands_free"
                            android:textColor="#666167"/>
                    </LinearLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btn_hangup_call"
                        android:layout_width="fill_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/em_call_hangup_bg"
                        android:gravity="center"
                        android:text="@string/hang_up"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:visibility="invisible"/>

                    <LinearLayout
                        android:id="@+id/ll_coming_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp">

                        <Button
                            android:id="@+id/btn_refuse_call"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:background="@drawable/em_call_hangup_bg"
                            android:gravity="center"
                            android:text="@string/hang_up"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"/>

                        <Button
                            android:id="@+id/btn_answer_call"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_marginLeft="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/em_call_answer_bg"
                            android:gravity="center"
                            android:text="@string/answer"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekbar_y_detal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_switch_camera"
            android:max="200"
            android:progress="100"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>